--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -152,6 +152,9 @@
 }
 .navbar{
     background: #000;
+    display: flex ;
+    align-items: center;
+    justify-content: center;
 }
 .custom-modal {
   display: none;
