--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -11,7 +11,9 @@
   padding-top: 15px;
   min-height: 100vh;
 }
-
+body {
+  background-color: black;
+}
 .chat-col.chat-opened {
   right: 0;
   overflow-y: auto;
