--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -14,6 +14,9 @@
 body {
   background-color: black;
 }
+#randomNumber {
+  display: none;
+}
 .chat-col.chat-opened {
   right: 0;
   overflow-y: auto;
