--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -49,7 +49,12 @@ body {
   border-left: 1px groove white;
   font-size: small;
 }
-
+#fullName {
+  display: none;
+}
+#roleName {
+  display: none;
+}
 .chat-box::placeholder {
   font-size: small;
   font-weight: lighter;
